--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,3 +14,23 @@
         "**/*.test.ts"
     ]
 }
+
+
+
+
+// {
+//     "compilerOptions": {
+//         "target": "es6",
+//         "module": "commonjs",
+//         "outDir": "dist",
+//         "rootDir": "src",
+//         "strict": true,
+//         "resolveJsonModule": true,
+//         "noImplicitAny": true,
+//         "esModuleInterop": true
+//     },
+//     "exclude": [
+//         "node_modules",
+//         "**/*.test.ts"
+//     ]
+// }
